namespace java org.sidoh.reactor_simulator.types

struct ReactorResult {
  1: double efficiency;
  2: double output;
  3: double fuelFertility;
  4: double coolantTemperature;
  5: double fuelHeat;
  6: double reactorHeat;
  7: string reactorLayout
}
